# SkrSkr

./: .gitignore
Deploy/: run.py
Develop/: hls.tcl  rtl.tcl
Develop/C/: CMakeLists.txt
Develop/C/src/: SkyNet.cpp  SkyNet.h  main.cpp  transform.cpp  utils.cpp
